# sudo-rug

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  error.txt  out.json  pyproject.toml  requirements.txt
docs/: architecture.md  commands.md  roadmap.md
src/sudo_rug/: __init__.py  __main__.py  app.py  main.py
src/sudo_rug/content/: __init__.py  messages.py  starter_scenarios.py
src/sudo_rug/core/: __init__.py  clock.py  enums.py  events.py  state.py
src/sudo_rug/shell/: __init__.py  commands.py  helptext.py  parser.py
src/sudo_rug/sim/: __init__.py  amm.py  bots.py  heat.py  market.py  opsec.py  token_factory.py
src/sudo_rug/ui/: log_view.py  screens.py  status_panel.py  widgets.py
tests/: __init__.py  smoke_test.py  test_amm.py  test_commands.py  test_events.py  test_heat.py  test_market.py  test_opsec.py  test_save.py  test_state.py
